# notification_microservice

./: .gitignore
.github/workflows/: actions.yaml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/backend/: settings.py  urls.py
backend/notifications/views/: notifications.py
deploy/: .env  docker-compose-ci.yaml
development_containers/: docker-compose.yaml
