[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["yes"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.7"
django-environ = "^0.11.2"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
django-environment = "^0.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
